k8s/db/hapi-db-vs.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: psql-vs
  namespace: datalake
spec:
  hosts:
  - "*"
  gateways:
  - postgres-gateway
  tcp:
  - match:
    - port: 5432
    route:
    - destination:
        host: hapi-postgresql.datalake.svc.cluster.local
        port:
          number: 5432
